<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.coin.CoinActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/coin_progress_bar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/img_coin_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/coin_name"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_coin_market_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_coin_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_coin_price_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/low_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_coin_price_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/high_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_coin_price_percent_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_price_percent_change"
                android:textSize="16sp" />



        </LinearLayout>

    </ScrollView>

</RelativeLayout>